// https://dbdiagram.io/d/64369a1c8615191cfa8d54ca
Table experiments {
  _id ObjectId
  name string
  description string
  dynamic_vars Array
  status enum [note:' "ACTIVE", "DELETED" ']
  created_at timestamp
  updated_at timestamp
}

Table prompt_templates {
  _id ObjectId
  name string
  description string
  conversation  Array [
    note: '
      [{ role: system, content: "asdasd"}, 
       { role: user, content: "asdasd"}, 
       { role: assistant, content: "asdasd"},
        { role: user, content: "asdasd"}]
    '
  ]
  status enum [note:' "ACTIVE", "DELETED" ']
  experiment_id ObjectId [ref: > experiments._id]
  created_at timestamp
  updated_at timestamp
}

Table test_cases {
  _id ObjectId
  name string
  description string
  dynamic_var_values  Object [
    note: '
      { var_1: value_1, var_2: value_2}
    '
  ]
  experiment_id ObjectId [ref: > experiments._id]
  expected_result Array
  status enum [note:' "ACTIVE", "DELETED", "DISABLED" ']
  created_at timestamp
  updated_at timestamp
}

Table evaluations {
  _id ObjectId
  model varchar
  eval varchar
  accuracy double
  prompt_template_id ObjectId [ref: > prompt_templates._id]
  run_id int
  status string [
    note: '
      INITIATED
      COMPLETED
      RUNNING
      FAILED
    '
  ]
  evals_parameter  Object [
    note: '
      { jsonl_file_name: "abc.jsonl", yaml_file_name: "abc.yaml"}
    '
  ]
  retry_count int
  error_object String
  total_testcases int
  passed_testcases int
  initiated_at timestamp
  completed_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table evaluation_test_case_relations {
  _id ObjectId
  evaluation_id ObjectId [ref: > evaluations._id ]
  prompt Array
  test_case_id ObjectId [ref: > test_cases._id]
  test_case_name String
  test_case_description String
  actual_result Array
  acceptable_result Array
  accuracy double
  jsonl_order int
  created_at timestamp
  updated_at timestamp

}